# url-shortener

./: .gitignore  Cargo.toml
migrations/: 20230307171737_url.sql
src/: main.rs
