[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.10", features = ["macros"] }
base62 = "2.0.2"
dotenv = "0.15.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
